--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -19,12 +19,15 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link" href="#">Category</a>
-        </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <button class="nav-link" (click)="login()">Click for login</button>
+            <button class="nav-link" (click)="click()">Click for unlogin</button>
+        </li>
+
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="product">Product</a>
         </li>
         <li class="nav-item dropdown">
           <a
